chore(deps): Update build deps and github actions (#69)
* chore(deps): Update build deps and github actions

* fix: resolve gradle URL deprecations

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: zml <zml@stellardrift.ca>